modified:   README.md 	modified:   index.js 	modified:   manifest.json 	Fixed colors not showing sometimes 	modified:   style.css 	Rewrote userblock

--- a/style.css
+++ b/style.css
@@ -61,3 +61,7 @@
 .vct2021:hover {
   box-shadow: inset 0px 0px 50px 0px #bb8934;
 }
+
+.bettervlr-unread {
+  box-shadow: inset 0 0 20px #da626c;
+}
